# FileSystemChangeMonitor

./: ReadMe.md
include/: filesystemchangemonitor.h  filesystemchangemonitorimpl.h  filesystemchangemonitorlinux.h  filesystemchangemonitorwindows.h
source/: filesystemchangemonitor.cpp  filesystemchangemonitorlinux.cpp  filesystemchangemonitorwindows.cpp
test/: CMakeLists.txt  test.cpp
